# Expense-Tracker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  env.example  init.sql  pyproject.toml  pytest.ini  run_server.py  run_tests.py  run_tests.sh  setup.cfg  setup.py
alembic/: env.py
docs/: README.md  api_reference.md  architecture.md  changelog.md  configuration_guide.md  deployment_guide.md  testing.md
docs/docker/: README.md  commands.md  docker_guide.md  production.md  troubleshooting.md
docs/implementation/: overview.md
docs/logging/: implementation.md
docs/step1/: 1_planning.md  2_design.md  3_user_stories.md  4_api_endpoints_overview.md  5_database_schema.md  6_architecture.md
docs/testing/: api_testing_results.md  postman_collection.json  postman_guide.md  testing_guide.md
requirements/: dev.txt  requirements.txt
src/api/: main.py
src/api/authentication/: auth.py
src/core/: async_database.py  auth_bypass.py  config.py  database.py  dependencies.py  exceptions.py  file_validation.py  logging_config.py  middleware.py  query_optimization.py  security.py
src/interfaces/: repository_interfaces.py  service_interfaces.py
src/models/: __init__.py  expense.py  user.py
src/repositories/: async_base_repository.py  category_repository.py  expense_repository.py  user_repository.py
src/schemas/: auth.py  category.py  category_queries.py  expense.py.bak  expense_queries.py  user.py
src/services/: async_base_service.py  category_service.py  expense_service.py  user_service.py
tests/: README.md  conftest.py  test_analytics.py  test_auth.py  test_categories.py  test_coverage_boost.py  test_database.py  test_enhanced_features.py  test_expenses.py  test_jwt_service.py  test_main.py  test_repositories.py  test_run_server.py  test_services.py
tests/api/: test_main.py  test_main_endpoints.py
tests/core/: test_async_database.py  test_auth_bypass.py  test_config.py  test_exceptions.py  test_file_validation.py  test_middleware.py  test_query_optimization.py  test_security.py
tests/integration/: test_integration.py
tests/repositories/: test_async_base_repository.py
tests/services/: test_async_base_service.py
tests/unit/: test_api.py  test_auth.py  test_category.py  test_config.py  test_exceptions.py  test_expense.py  test_logging.py  test_models.py  test_security.py  test_user.py
(+47 files in other folders)
